--- a/FrontendBlissMind/package.json
+++ b/FrontendBlissMind/package.json
@@ -16,7 +16,9 @@
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
-    "styled-components": "^6.1.15"
+    "styled-components": "^6.1.15",
+    "bootstrap": "^5.3.3",
+    "react-bootstrap": "^2.10.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
