Fix Style Home, login, register

--- a/FrontendBlissMind/package.json
+++ b/FrontendBlissMind/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "antd": "^5.24.3",
+    "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
+    "react-bootstrap": "^2.10.9",
+    "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
-    "styled-components": "^6.1.15",
-    "bootstrap": "^5.3.3",
-    "react-bootstrap": "^2.10.9"
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
