--- a/FrontendBlissMind/package.json
+++ b/FrontendBlissMind/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.9",
     "react-bootstrap-icons": "^1.11.5",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "styled-components": "^6.1.15"
   },
