Create Auth Service

--- a/FrontendBlissMind/package.json
+++ b/FrontendBlissMind/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "@tanstack/react-query": "^5.74.3",
     "antd": "^5.24.3",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
